How to use TensorBoard with PyTorch

--- a/Simple_NeuralNetwork.ipynb
+++ b/Simple_NeuralNetwork.ipynb
@@ -15,15 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-02T11:41:32.573814Z",
-     "start_time": "2023-12-02T11:41:32.514483Z"
+     "end_time": "2023-12-03T08:38:53.192087Z",
+     "start_time": "2023-12-03T08:38:51.692824Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    }
+   ],
    "source": [
     "from prepare_jpype import start_jpype\n",
     "\n",
@@ -40,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-02T11:41:33.776345Z",
-     "start_time": "2023-12-02T11:41:32.548150Z"
+     "end_time": "2023-12-03T08:38:59.769504Z",
+     "start_time": "2023-12-03T08:38:57.307505Z"
     }
    },
    "outputs": [
@@ -95,12 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "38d831be-3560-4efd-89bd-1ec71f001833",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-02T11:41:33.782057Z",
-     "start_time": "2023-12-02T11:41:33.775221Z"
+     "end_time": "2023-12-03T08:39:01.484815Z",
+     "start_time": "2023-12-03T08:39:01.477002Z"
     }
    },
    "outputs": [
@@ -152,82 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "10aa0ccfb7839e99",
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-02T11:42:34.255556Z",
-     "start_time": "2023-12-02T11:41:33.792282Z"
-    }
-   },
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cpu device\n",
-      "NeuralNetwork(\n",
-      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
-      "  (linear_relu_stack): Sequential(\n",
-      "    (0): Linear(in_features=6, out_features=512, bias=True)\n",
-      "    (1): ReLU()\n",
-      "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
-      "    (3): ReLU()\n",
-      "    (4): Linear(in_features=512, out_features=2, bias=True)\n",
-      "  )\n",
-      ")\n",
-      "Accuracy at 1000 : 57.3\n",
-      "Accuracy at 2000 : 62.2\n",
-      "Accuracy at 3000 : 62.133333333333326\n",
-      "Accuracy at 4000 : 63.1\n",
-      "Accuracy at 5000 : 63.75999999999999\n",
-      "Accuracy at 6000 : 63.7\n",
-      "Accuracy at 7000 : 63.614285714285714\n",
-      "Accuracy at 8000 : 63.74999999999999\n",
-      "Accuracy at 9000 : 64.33333333333333\n",
-      "Accuracy at 10000 : 64.77000000000001\n",
-      "Accuracy at 11000 : 64.96363636363637\n",
-      "Accuracy at 12000 : 65.28333333333333\n",
-      "Accuracy at 13000 : 65.67692307692307\n",
-      "Accuracy at 14000 : 66.40714285714286\n",
-      "Accuracy at 15000 : 66.90666666666667\n",
-      "Accuracy at 16000 : 67.06875\n",
-      "Accuracy at 17000 : 67.41764705882353\n",
-      "Accuracy at 18000 : 67.9\n",
-      "Accuracy at 19000 : 68.43684210526317\n",
-      "Accuracy at 20000 : 68.975\n",
-      "Accuracy at 21000 : 69.10952380952381\n",
-      "Accuracy at 22000 : 69.51818181818183\n",
-      "Accuracy at 23000 : 69.7304347826087\n",
-      "Accuracy at 24000 : 70.0125\n",
-      "Accuracy at 25000 : 70.212\n",
-      "Accuracy at 26000 : 70.39999999999999\n",
-      "Accuracy at 27000 : 70.69259259259259\n",
-      "Accuracy at 28000 : 70.83214285714286\n",
-      "Accuracy at 29000 : 70.93103448275862\n",
-      "Accuracy at 30000 : 71.02666666666667\n",
-      "Accuracy at 31000 : 71.17096774193548\n",
-      "Accuracy at 32000 : 70.86875\n",
-      "Accuracy at 33000 : 70.89090909090909\n",
-      "Accuracy at 34000 : 70.88823529411765\n",
-      "Accuracy at 35000 : 70.83714285714285\n",
-      "Accuracy at 36000 : 70.97222222222223\n",
-      "Accuracy at 37000 : 70.9918918918919\n",
-      "Accuracy at 38000 : 71.21052631578947\n",
-      "Accuracy at 39000 : 71.45384615384616\n",
-      "Accuracy at 40000 : 71.675\n",
-      "Accuracy at 41000 : 71.79024390243902\n",
-      "Accuracy at 42000 : 71.95714285714286\n",
-      "Accuracy at 43000 : 72.11860465116278\n",
-      "Accuracy at 44000 : 72.1590909090909\n",
-      "Accuracy at 45000 : 72.24666666666667\n",
-      "Accuracy at 45312 : 72.2700388418079\n"
+      "Using cpu device\n"
      ]
     }
    ],
    "source": [
-    "from evaluation import ClassificationEvaluator\n",
     "import torch\n",
     "from torch import nn\n",
     "\n",
@@ -256,8 +203,94 @@
     "\n",
     "model = None\n",
     "optimizer = None\n",
-    "loss_fn = nn.CrossEntropyLoss()\n",
-    "\n",
+    "loss_fn = nn.CrossEntropyLoss()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:39:14.442525Z",
+     "start_time": "2023-12-03T08:39:11.361827Z"
+    }
+   },
+   "id": "28c87878ee6de83f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "10aa0ccfb7839e99",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:40:17.878908Z",
+     "start_time": "2023-12-03T08:39:23.127928Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NeuralNetwork(\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear_relu_stack): Sequential(\n",
+      "    (0): Linear(in_features=6, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=512, out_features=2, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "Accuracy at 1000 : 59.599999999999994\n",
+      "Accuracy at 2000 : 63.7\n",
+      "Accuracy at 3000 : 63.16666666666667\n",
+      "Accuracy at 4000 : 64.0\n",
+      "Accuracy at 5000 : 64.62\n",
+      "Accuracy at 6000 : 64.51666666666667\n",
+      "Accuracy at 7000 : 64.28571428571429\n",
+      "Accuracy at 8000 : 64.4\n",
+      "Accuracy at 9000 : 64.94444444444444\n",
+      "Accuracy at 10000 : 65.39\n",
+      "Accuracy at 11000 : 65.54545454545455\n",
+      "Accuracy at 12000 : 65.76666666666667\n",
+      "Accuracy at 13000 : 66.10769230769232\n",
+      "Accuracy at 14000 : 66.7642857142857\n",
+      "Accuracy at 15000 : 67.26666666666667\n",
+      "Accuracy at 16000 : 67.43124999999999\n",
+      "Accuracy at 17000 : 67.73529411764706\n",
+      "Accuracy at 18000 : 68.22222222222221\n",
+      "Accuracy at 19000 : 68.75263157894736\n",
+      "Accuracy at 20000 : 69.235\n",
+      "Accuracy at 21000 : 69.32857142857142\n",
+      "Accuracy at 22000 : 69.73636363636363\n",
+      "Accuracy at 23000 : 69.86956521739131\n",
+      "Accuracy at 24000 : 70.1125\n",
+      "Accuracy at 25000 : 70.292\n",
+      "Accuracy at 26000 : 70.43846153846154\n",
+      "Accuracy at 27000 : 70.74814814814815\n",
+      "Accuracy at 28000 : 70.87857142857142\n",
+      "Accuracy at 29000 : 70.95172413793104\n",
+      "Accuracy at 30000 : 71.02000000000001\n",
+      "Accuracy at 31000 : 71.14838709677419\n",
+      "Accuracy at 32000 : 70.79375\n",
+      "Accuracy at 33000 : 70.80606060606061\n",
+      "Accuracy at 34000 : 70.78235294117647\n",
+      "Accuracy at 35000 : 70.70571428571428\n",
+      "Accuracy at 36000 : 70.83611111111111\n",
+      "Accuracy at 37000 : 70.85405405405405\n",
+      "Accuracy at 38000 : 71.07368421052631\n",
+      "Accuracy at 39000 : 71.2897435897436\n",
+      "Accuracy at 40000 : 71.49\n",
+      "Accuracy at 41000 : 71.58292682926829\n",
+      "Accuracy at 42000 : 71.73809523809524\n",
+      "Accuracy at 43000 : 71.90232558139536\n",
+      "Accuracy at 44000 : 71.92045454545455\n",
+      "Accuracy at 45000 : 72.00222222222223\n",
+      "Accuracy at 45312 : 72.01844985875707\n"
+     ]
+    }
+   ],
+   "source": [
+    "from evaluation import ClassificationEvaluator\n",
     "\n",
     "# Creating the evaluator\n",
     "evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
@@ -303,6 +336,199 @@
     "    \n",
     "print(f'Accuracy at {i} : {evaluator.accuracy()}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2. How to use TensorBoard with PyTorch"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6f7cccf5dfb93550"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Install TensorBoard through the command line to visualize data you logged\n",
+    "\n",
+    "```sh\n",
+    "pip install tensorboard\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "43078242df35b155"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Clear any logs from previous runs\n",
+    "\n",
+    "```sh\n",
+    "rm -rf ./runs\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8ac091a2fe4cf209"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create a SummaryWriter instance."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "db2288d0cae3250e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "writer = SummaryWriter()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:46:58.941683Z",
+     "start_time": "2023-12-03T08:46:58.796558Z"
+    }
+   },
+   "id": "8ec688a5b4af052f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Writer will output to ./runs/ directory by default."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3bf9fc5f5d481206"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "from evaluation import ClassificationEvaluator\n",
+    "\n",
+    "# Creating the evaluator\n",
+    "evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
+    "\n",
+    "## Opening a file again to strat from the beginning\n",
+    "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
+    "i = 0\n",
+    "while elec_stream.has_more_instances():\n",
+    "    i += 1\n",
+    "    instance = elec_stream.next_instance()\n",
+    "    if model is None:\n",
+    "        moa_instance = instance.get_MOA_InstanceExample().getData()\n",
+    "        # initialize the model and send it to the device\n",
+    "        model = NeuralNetwork(input_size=moa_instance.numInputAttributes(), number_of_classes=moa_instance.numClasses()).to(device)\n",
+    "        # set the optimizer\n",
+    "        optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)\n",
+    "        print(model)\n",
+    "    \n",
+    "    X = torch.tensor(instance.x(), dtype=torch.float32)\n",
+    "    y = torch.tensor(instance.y(), dtype=torch.long)\n",
+    "    # set the device and add a dimension to the tensor\n",
+    "    X, y = torch.unsqueeze(X.to(device), 0), torch.unsqueeze(y.to(device),0) \n",
+    "    \n",
+    "    # turn off gradient collection for test\n",
+    "    with torch.no_grad():\n",
+    "        pred = model(X)\n",
+    "        prediction = torch.argmax(pred)\n",
+    "\n",
+    "    # update evaluator with predicted class\n",
+    "    evaluator.update(instance.y(), prediction)\n",
+    "  \n",
+    "    # Compute prediction error\n",
+    "    pred = model(X)\n",
+    "    loss = loss_fn(pred, y)\n",
+    "\n",
+    "    # Backpropagation\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
+    "    if i % 1000 == 0:\n",
+    "        writer.add_scalar(\"accuracy\", evaluator.accuracy(), i)\n",
+    "    \n",
+    "writer.add_scalar(\"accuracy\", evaluator.accuracy(), i)\n",
+    "writer.flush()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:48:08.339851Z",
+     "start_time": "2023-12-03T08:47:18.177021Z"
+    }
+   },
+   "id": "b5d0d6dd10dacc37"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Call flush() method to make sure that all pending events have been written to disk.\n",
+    "\n",
+    "See torch.utils.tensorboard tutorials to find more TensorBoard visualization types you can log.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4b0ff08045e19911"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "# If you do not need the summary writer anymore, call close() method.\n",
+    "writer.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:49:14.066571Z",
+     "start_time": "2023-12-03T08:49:14.058709Z"
+    }
+   },
+   "id": "b228ae7468b3e4f1"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "```\n",
+    "# This is formatted as code\n",
+    "```\n",
+    "\n",
+    "## Run TensorBoard\n",
+    "Now, start TensorBoard, specifying the root log directory you used above. \n",
+    "Argument ``logdir`` points to directory where TensorBoard will look to find \n",
+    "event files that it can display. TensorBoard will recursively walk \n",
+    "the directory structure rooted at ``logdir``, looking for ``.*tfevents.*`` files.\n",
+    "\n",
+    "```sh\n",
+    "tensorboard --logdir=runs\n",
+    "```\n",
+    "Go to the URL it provides\n",
+    "\n",
+    "This dashboard shows how the accuracy change with time. \n",
+    "You can use it to also track training speed, learning rate, and other \n",
+    "scalar values."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "41e42734ee9ce0f1"
   }
  ],
  "metadata": {
