several updates, such as MOALearners.py -> learners.py, adding SKClassifier wrapper, ...

--- a/Classification_Evaluator_Examples.ipynb
+++ b/Classification_Evaluator_Examples.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
+      "MOA jar path location (config.ini): ./jar/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
@@ -414,7 +414,7 @@
      "output_type": "stream",
      "text": [
       "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
-      "[10.0, 10.0, -28.57142857142858, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
+      "[10.0, 10.0, -25.000000000000007, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
       "10.0\n"
      ]
     }
@@ -1082,9 +1082,9 @@
     {
      "data": {
       "text/plain": [
-       "      1.0   2.0  \n",
-       "1.0   831     6  \n",
-       "2.0   146    17  "
+       "     1.0   2.0  \n",
+       "1.0  831     6  \n",
+       "2.0  146    17  "
       ]
      },
      "execution_count": 16,
