--- a/Data_Reading.ipynb
+++ b/Data_Reading.ipynb
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
+      "MOA jar path location (config.ini): ./jar/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
@@ -244,8 +244,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 3.12 s, sys: 45.8 ms, total: 3.16 s\n",
-      "Wall time: 2.14 s\n"
+      "CPU times: user 3.21 s, sys: 71 ms, total: 3.28 s\n",
+      "Wall time: 2.15 s\n"
      ]
     }
    ],
@@ -444,8 +444,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 783 ms, sys: 20.9 ms, total: 804 ms\n",
-      "Wall time: 483 ms\n"
+      "CPU times: user 788 ms, sys: 24.8 ms, total: 813 ms\n",
+      "Wall time: 518 ms\n"
      ]
     }
    ],
@@ -1218,13 +1218,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x111f92c10>\n",
-      "<stream.Instance object at 0x112024b50>\n",
-      "<stream.Instance object at 0x111f92c10>\n",
+      "<stream.Instance object at 0x2b094f310>\n",
+      "<stream.Instance object at 0x2afa8b990>\n",
+      "<stream.Instance object at 0x2c53fadd0>\n",
       "restarting stream...\n",
-      "<stream.Instance object at 0x112024b50>\n",
-      "<stream.Instance object at 0x111f92c10>\n",
-      "<stream.Instance object at 0x112024b50>\n",
+      "<stream.Instance object at 0x2c53fadd0>\n",
+      "<stream.Instance object at 0x2afa73bd0>\n",
+      "<stream.Instance object at 0x2b094f310>\n",
       "Not a moa_stream, a numpy read file\n",
       "Read 45312 instances, total = 45312\n"
      ]
@@ -1479,7 +1479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x2ac8253a0>\n"
+      "<stream.Instance object at 0x2c8adb690>\n"
      ]
     },
     {
@@ -1511,7 +1511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x117d0b970>\n",
+      "<stream.Instance object at 0x2c640fd50>\n",
       "Not a moa_stream, a numpy read file\n"
      ]
     }
@@ -1549,8 +1549,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.7 s, sys: 78.6 ms, total: 19.7 s\n",
-      "Wall time: 19.2 s\n"
+      "CPU times: user 22 s, sys: 103 ms, total: 22.1 s\n",
+      "Wall time: 22 s\n"
      ]
     }
    ],
@@ -1580,8 +1580,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.8 s, sys: 50.5 ms, total: 19.9 s\n",
-      "Wall time: 19.4 s\n"
+      "CPU times: user 22.2 s, sys: 91.3 ms, total: 22.3 s\n",
+      "Wall time: 22.4 s\n"
      ]
     }
    ],
@@ -1626,7 +1626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
