--- a/Efficient_Evaluation.ipynb
+++ b/Efficient_Evaluation.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "* [EXPERIMENTAL] Changed the behavior of *_evaluation() and *_evaluation_fast() such that if NumpyStream is used, then defaults to *_evaluation() and if not, *_evaluation_fast() is used. **Setting optimise=False disables this behavior.**\n",
     "\n",
-    "**Notebook last updated on 05/10/2023**"
+    "**Notebook last updated on 08/12/2023**"
    ]
   },
   {
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
+      "MOA jar path location (config.ini): ./jar/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "fad18e8c-21a5-4e56-84a4-c83102e890df",
    "metadata": {},
    "outputs": [],
@@ -83,9 +83,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'AdaptiveRandomForest',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10dc16d60>,\n",
-       " 'wallclock': 51.987720012664795,\n",
-       " 'cpu_time': 62.91014199999999}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12811f550>,\n",
+       " 'wallclock': 57.29525828361511,\n",
+       " 'cpu_time': 69.27170899999999}"
       ]
      },
      "metadata": {},
@@ -143,7 +143,7 @@
    ],
    "source": [
     "from stream import stream_from_file\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation_fast\n",
     "from ensembles import AdaptiveRandomForest\n",
     "\n",
@@ -168,9 +168,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'AdaptiveRandomForest',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1043a6df0>,\n",
-       " 'wallclock': 52.77464509010315,\n",
-       " 'cpu_time': 56.741282}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x11fc76b10>,\n",
+       " 'wallclock': 61.14156198501587,\n",
+       " 'cpu_time': 65.82365700000001}"
       ]
      },
      "metadata": {},
@@ -228,7 +228,7 @@
    ],
    "source": [
     "from stream import stream_from_file\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
     "from ensembles import AdaptiveRandomForest\n",
     "\n",
@@ -264,9 +264,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12fe6ffd0>,\n",
-       " 'wallclock': 12.531036138534546,\n",
-       " 'cpu_time': 13.005235000000027}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x107b54090>,\n",
+       " 'wallclock': 13.216187715530396,\n",
+       " 'cpu_time': 13.94817599999999}"
       ]
      },
      "metadata": {},
@@ -324,7 +324,7 @@
    ],
    "source": [
     "from stream import RandomTreeGenerator\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation_fast\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -348,9 +348,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652bdf0>,\n",
-       " 'wallclock': 148.4728820323944,\n",
-       " 'cpu_time': 148.631902}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10801b850>,\n",
+       " 'wallclock': 154.34650802612305,\n",
+       " 'cpu_time': 151.51606600000002}"
       ]
      },
      "metadata": {},
@@ -408,7 +408,7 @@
    ],
    "source": [
     "from stream import RandomTreeGenerator\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -442,9 +442,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652b340>,\n",
-       " 'wallclock': 39.90633821487427,\n",
-       " 'cpu_time': 40.72836899999999}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x128156590>,\n",
+       " 'wallclock': 42.74231219291687,\n",
+       " 'cpu_time': 47.62111900000002}"
       ]
      },
      "metadata": {},
@@ -502,7 +502,7 @@
    ],
    "source": [
     "from stream import stream_from_file\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation_fast\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -527,9 +527,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12fb58700>,\n",
-       " 'wallclock': 50.05150485038757,\n",
-       " 'cpu_time': 50.054903000000024}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x109963750>,\n",
+       " 'wallclock': 57.021140813827515,\n",
+       " 'cpu_time': 56.200113999999985}"
       ]
      },
      "metadata": {},
@@ -587,7 +587,7 @@
    ],
    "source": [
     "from stream import stream_from_file\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -624,10 +624,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'StreamingRandomPatches',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1043a6cd0>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x12fe6ffd0>,\n",
-       " 'wallclock': 200.3791537284851,\n",
-       " 'cpu_time': 240.58956100000006}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12815ef10>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x12816db90>,\n",
+       " 'wallclock': 227.7408480644226,\n",
+       " 'cpu_time': 259.27962400000007}"
       ]
      },
      "metadata": {},
@@ -797,7 +797,7 @@
    ],
    "source": [
     "from stream import stream_from_file\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from moa.classifiers.meta import StreamingRandomPatches\n",
     "from evaluation import prequential_evaluation_fast\n",
     "\n",
@@ -822,10 +822,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'StreamingRandomPatches',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1042e7190>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x12fe6fd30>,\n",
-       " 'wallclock': 200.9605917930603,\n",
-       " 'cpu_time': 222.95696600000008}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12815d110>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x12815fed0>,\n",
+       " 'wallclock': 241.547532081604,\n",
+       " 'cpu_time': 268.73538499999995}"
       ]
      },
      "metadata": {},
@@ -995,7 +995,7 @@
    ],
    "source": [
     "from stream import stream_from_file\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from moa.classifiers.meta import StreamingRandomPatches\n",
     "from evaluation import prequential_evaluation\n",
     "\n",
@@ -1037,8 +1037,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 48s, sys: 5.75 s, total: 4min 54s\n",
-      "Wall time: 1min 54s\n"
+      "CPU times: user 7min 23s, sys: 6.77 s, total: 7min 29s\n",
+      "Wall time: 2min 38s\n"
      ]
     }
    ],
@@ -1060,9 +1060,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652b640>,\n",
-       " 'wallclock': 40.77925705909729,\n",
-       " 'cpu_time': 40.82441000000017}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1080b2350>,\n",
+       " 'wallclock': 42.66289830207825,\n",
+       " 'cpu_time': 42.10631599999988}"
       ]
      },
      "metadata": {},
@@ -1119,7 +1119,7 @@
     }
    ],
    "source": [
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -1142,9 +1142,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652bc70>,\n",
-       " 'wallclock': 40.4269802570343,\n",
-       " 'cpu_time': 40.419790999999805}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12815f3d0>,\n",
+       " 'wallclock': 43.035099029541016,\n",
+       " 'cpu_time': 42.23444399999994}"
       ]
      },
      "metadata": {},
@@ -1201,7 +1201,7 @@
     }
    ],
    "source": [
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -1232,10 +1232,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652ba90>,\n",
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x11fca2190>,\n",
        " 'windowed': None,\n",
-       " 'wallclock': 40.60796499252319,\n",
-       " 'cpu_time': 40.6174410000001}"
+       " 'wallclock': 43.3126118183136,\n",
+       " 'cpu_time': 42.54233700000009}"
       ]
      },
      "metadata": {},
@@ -1292,7 +1292,7 @@
     }
    ],
    "source": [
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -1315,10 +1315,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12fe8e910>,\n",
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12815f410>,\n",
        " 'windowed': None,\n",
-       " 'wallclock': 40.5016028881073,\n",
-       " 'cpu_time': 40.49966399999994}"
+       " 'wallclock': 42.468923807144165,\n",
+       " 'cpu_time': 42.22687700000006}"
       ]
      },
      "metadata": {},
@@ -1375,7 +1375,7 @@
     }
    ],
    "source": [
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
@@ -1421,7 +1421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
