--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -5,20 +5,22 @@
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
    "source": [
-    "## Accessing the input data x()\n",
+    "## Preprocessing\n",
     "\n",
+    "**Accessing the input data x()**\n",
     "* Accessing the input data as a double array from an ```Instance``` through function ```x()```\n",
-    "* Instances are represented internally as MOA Instances. \n",
-    "* Includes an example of how preprocessing (from MOA) can be used, **maybe this example could be moved elsewhere**\n",
-    "* ```x()``` is read-only as of now, so one cannot preprocess instances\n",
-    "* **TODO**: Allow modifying ```x()``` so that python-based preprocessing can be used. \n",
+    "* Instances are represented internally as MOA Instances.\n",
     "\n",
-    "**notebook last updated on 01/12/2023**"
+    "\n",
+    "* Includes an example of how preprocessing can be accomplished.\n",
+    "* ```x()``` is read-only as of now, so one cannot preprocess instances\n",
+    "\n",
+    "**notebook last updated on 08/12/2023**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
    "metadata": {},
    "outputs": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
    "metadata": {},
    "outputs": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "38d831be-3560-4efd-89bd-1ec71f001833",
    "metadata": {},
    "outputs": [
@@ -134,84 +136,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "948e37ec-fbfd-43ea-a04a-7c11215452cc",
-   "metadata": {},
-   "source": [
-    "## 1. Using scikit-learn\n",
-    "\n",
-    "* Example showing how a model from scikit-learn can be used with our ```Instance``` representation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "2745848d-43d1-4d9e-a191-14e6be61bf7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "83.88064971751412"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn import linear_model\n",
-    "\n",
-    "## Opening a file as a stream\n",
-    "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
-    "\n",
-    "# Creating a learner\n",
-    "sklearn_SGD = linear_model.SGDClassifier()\n",
-    "\n",
-    "# Creating the evaluator\n",
-    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
-    "\n",
-    "# Counter for partial fits\n",
-    "partial_fit_count = 0\n",
-    "while elec_stream.has_more_instances():\n",
-    "    instance = elec_stream.next_instance()\n",
-    "\n",
-    "    if partial_fit_count > 0: # scikit-learn does not allows invoking predict in a model that was not fit before\n",
-    "        prediction = sklearn_SGD.predict([instance.x()])\n",
-    "    ob_evaluator.update(instance.y(), prediction)\n",
-    "    sklearn_SGD.partial_fit([instance.x()], [instance.y()], classes=elec_stream.schema.get_label_indexes())\n",
-    "    partial_fit_count += 1\n",
-    "\n",
-    "ob_evaluator.accuracy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "d9460aa8-beb8-4cc9-92dd-0f325a829eff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "elec_stream.schema.get_label_indexes()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a48e9306-f459-4d8a-8608-9bd71a7600ae",
    "metadata": {},
    "source": [
-    "## 2. Preprocessing using MOA"
+    "## 1. Preprocessing using MOA\n",
+    "\n"
    ]
   },
   {
@@ -219,7 +148,7 @@
    "id": "55d070de-8697-4f98-a11b-eab4e3d5c281",
    "metadata": {},
    "source": [
-    "### 2.1 Running onlineBagging without any preprocessing"
+    "### 1.1 Running onlineBagging without any preprocessing"
    ]
   },
   {
@@ -268,57 +197,24 @@
    "id": "0c1360ef-0583-4c87-8645-1e2d701fffca",
    "metadata": {},
    "source": [
-    "### 2.2 Online Bagging using the preprocessing method from MOA\n",
+    "### 1.2 Online Bagging using the preprocessing method from MOA\n",
     "* The API is still a bit rough"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f6fb628f-aefc-4bf1-8322-a175a16170e4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ArffFileStream -f ./data/electricity.arff'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# shows the creation string, the __class__ is needed as a parameter to the function is the class used. \n",
-    "elec_stream.moa_stream.getCLICreationString(elec_stream.moa_stream.__class__)"
+    "# elec_stream.moa_stream.getCLICreationString(elec_stream.moa_stream.__class__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5cdc2a2f-3259-4431-943f-7392fe520e44",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Show the number of attributes (including the output)\n",
-    "elec_stream.get_schema().num_attributes_including_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ae9bb646-e0d1-4de6-b5a1-cff0f0a1b172",
    "metadata": {},
    "outputs": [
@@ -328,7 +224,7 @@
        "79.69632768361582"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,62 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "ef2d1530-6103-467d-87ac-266057a68e4f",
+   "execution_count": null,
+   "id": "c11f5b39-bf53-496e-b42c-25f89458ff03",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " 'get_label_indexes',\n",
-       " 'get_label_values',\n",
-       " 'get_moa_header',\n",
-       " 'get_num_attributes',\n",
-       " 'get_valid_index_for_label',\n",
-       " 'is_classification',\n",
-       " 'is_regression',\n",
-       " 'label_indexes',\n",
-       " 'label_values',\n",
-       " 'moa_header',\n",
-       " 'num_attributes_including_output',\n",
-       " 'regression']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(elec_stream_normalised.get_schema())"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
