--- a/Basic_Classification_Examples.ipynb
+++ b/Basic_Classification_Examples.ipynb
@@ -9,30 +9,18 @@
     "\n",
     "* Using the ```test_then_train_evaluation``` and ```test_then_train_RIVER``` helper functions.\n",
     "* These are just examples on how to run several algorithms, it is kind of repetitive, but might be useful to have an example.\n",
-    "* We show how to use AdaptiveRandomForest using its wrapper (```from ensembles import AdaptiveRandomForest```) and how to create MOA learners and wrap them using a MOALearner (```from MOALearners import MOAClassifier```).\n",
+    "* We show how to use AdaptiveRandomForest using its wrapper (```from ensembles import AdaptiveRandomForest```) and how to create MOA learners and wrap them using a MOALearner (```from learners import MOAClassifier```).\n",
     "* Examples from MOA and River use the same CSV file.\n",
     "\n",
-    "**Notebook last update: 20/10/2023**"
+    "**Notebook last update: 08/12/2023**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "be91302b-3d48-449a-9eeb-4444d86d8e7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prepare_jpype import start_jpype\n",
     "start_jpype()\n",
@@ -43,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "60bb1d0d-66e3-45f1-b7cc-15ae08cbe81a",
    "metadata": {},
    "outputs": [],
@@ -64,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "3d366b78-feeb-497a-8a05-578437600343",
    "metadata": {},
    "outputs": [],
@@ -76,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
    "metadata": {},
    "outputs": [
@@ -84,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARFClassifier, 0.7241, 0.0097, 0.0100\n"
+      "ARFClassifier, 0.8760, 0.2750, 0.2707\n"
      ]
     }
    ],
@@ -102,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "0d9c9d33-52b2-4442-a577-396de0bf31e7",
    "metadata": {},
    "outputs": [
@@ -110,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTreeClassifier, 0.7931, 0.0022, 0.0029\n"
+      "HoeffdingTreeClassifier, 0.8230, 0.0280, 0.0288\n"
      ]
     }
    ],
@@ -125,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "84f29ddd-2e97-4c31-945a-1129e8ca1833",
    "metadata": {},
    "outputs": [
@@ -133,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNNClassifier, 0.6897, 0.0011, 0.0011\n"
+      "KNNClassifier, 0.7550, 1.6912, 1.6247\n"
      ]
     }
    ],
@@ -148,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "47e22fbe-c42a-4cf0-9f40-0c408fc8185b",
    "metadata": {},
    "outputs": [
@@ -156,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GaussianNB, 0.7931, 0.0019, 0.0026\n"
+      "GaussianNB, 0.8490, 0.0258, 0.0298\n"
      ]
     }
    ],
@@ -171,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "7f59847d-b33b-431e-8ddb-ee0a3a5375b7",
    "metadata": {},
    "outputs": [
@@ -179,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SRPClassifier(HoeffdingTreeClassifier), 0.8276, 0.0232, 0.0237\n"
+      "SRPClassifier(HoeffdingTreeClassifier), 0.8870, 0.6245, 0.6069\n"
      ]
     }
    ],
@@ -197,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "e25a96f4-7612-445b-b210-838d474fba2d",
    "metadata": {},
    "outputs": [
@@ -205,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.7931, 0.0021, 0.0027\n"
+      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.1920, 0.1809\n"
      ]
     }
    ],
@@ -228,19 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "af49a45b-767d-4532-bf39-f408d2ab515a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/stream.py:243: RuntimeWarning: invalid value encountered in cast\n",
-      "  return NumpyStream(X=X, y=y.astype(int), dataset_name=\"Elec\", feature_names=header[:-1], target_name=header[-1], enforce_regression=enforce_regression)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from moa.streams import ArffFileStream\n",
     "from stream import stream_from_file\n",
@@ -251,17 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "8b4a0ea7-8707-4bf3-8ce6-1f3a965497c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['0']"
+       "['0', '1']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "9cf0778d-942f-44e2-bd79-e754e6c7735e",
    "metadata": {},
    "outputs": [
@@ -280,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AdaptiveRandomForest wallclock: 0.04669809341430664 cpu_time: 0.13924000000000003 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
+      "AdaptiveRandomForest wallclock: 0.20018792152404785 cpu_time: 0.4992449999999984 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 89.45, 'Kappa Statistic (percent)': 78.10294728102947, 'Kappa Temporal Statistic (percent)': 24.9110320284697, 'Kappa M Statistic (percent)': 73.2233502538071}\n"
      ]
     }
    ],
@@ -295,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "1270cf7b-3bf1-4092-9498-f5e6f91aea64",
    "metadata": {},
    "outputs": [
@@ -303,13 +282,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTree wallclock: 0.0033457279205322266 cpu_time: 0.008777000000000257 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
+      "HoeffdingTree wallclock: 0.038034915924072266 cpu_time: 0.05328499999999892 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.65, 'Kappa Statistic (percent)': 64.11315010011087, 'Kappa Temporal Statistic (percent)': -23.487544483985793, 'Kappa M Statistic (percent)': 55.964467005076145}\n"
      ]
     }
    ],
    "source": [
     "from moa.classifiers.trees import HoeffdingTree\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "\n",
     "ht_moa = MOAClassifier(moa_learner=HoeffdingTree())\n",
     "\n",
@@ -319,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "c8ac0b21-a3bf-488b-b5cb-ce6289298ee1",
    "metadata": {},
    "outputs": [
@@ -327,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN wallclock: 0.004328250885009766 cpu_time: 0.009232000000000795 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
+      "kNN wallclock: 0.1179201602935791 cpu_time: 0.19824599999999926 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 80.55, 'Kappa Statistic (percent)': 59.525712097754244, 'Kappa Temporal Statistic (percent)': -38.43416370106766, 'Kappa M Statistic (percent)': 50.63451776649747}\n"
      ]
     }
    ],
@@ -342,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "15ccd3c4-f0d6-479d-b773-df230cfdf2aa",
    "metadata": {},
    "outputs": [
@@ -350,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EFDT wallclock: 0.0025169849395751953 cpu_time: 0.004997999999999614 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
+      "EFDT wallclock: 0.03838682174682617 cpu_time: 0.04312900000000042 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.69999999999999, 'Kappa Statistic (percent)': 64.22426628726465, 'Kappa Temporal Statistic (percent)': -23.131672597864835, 'Kappa M Statistic (percent)': 56.09137055837563}\n"
      ]
     }
    ],
@@ -365,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "e264098a-588a-456b-ae11-dced5b5ceb7f",
    "metadata": {},
    "outputs": [
@@ -373,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NaiveBayes wallclock: 0.0011181831359863281 cpu_time: 0.0023569999999999425 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
+      "NaiveBayes wallclock: 0.034284114837646484 cpu_time: 0.04129999999999967 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 84.0, 'Kappa Statistic (percent)': 66.56748353448563, 'Kappa Temporal Statistic (percent)': -13.879003558718917, 'Kappa M Statistic (percent)': 59.39086294416243}\n"
      ]
     }
    ],
@@ -388,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "6fa952e8-08e3-4e6f-88ad-dac1aaea94ef",
    "metadata": {},
    "outputs": [
@@ -396,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StreamingRandomPatches wallclock: 0.010870933532714844 cpu_time: 0.03796500000000069 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
+      "StreamingRandomPatches wallclock: 0.22035813331604004 cpu_time: 0.43422499999999786 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 88.75, 'Kappa Statistic (percent)': 76.35402128768642, 'Kappa Temporal Statistic (percent)': 19.928825622775744, 'Kappa M Statistic (percent)': 71.4467005076142}\n"
      ]
     }
    ],
@@ -434,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
