--- a/SSL_example.ipynb
+++ b/SSL_example.ipynb
@@ -5,32 +5,20 @@
    "id": "354c9535-8ed8-4494-b6b1-80ec0c74ba9a",
    "metadata": {},
    "source": [
-    "# SSL DEMO\n",
+    "# Semi-supervised Learning example\n",
     "\n",
     "* How to prepare and execute SSL experiments\n",
     "* ```ClusterAndLabelClassifier``` is a SSL algorithm implemented in MOA\n",
     "\n",
-    "**Notebook last updated on 20/10/2023**"
+    "**Notebook last updated on 08/12/2023**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "be53af05-72a8-4311-b07f-26f70d681e3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the JVM and add the MOA jar to the classpath\n",
     "from prepare_jpype import start_jpype\n",
@@ -39,21 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "69abe6d9-5804-40f7-938c-75d87cf15866",
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports from the library. \n",
     "from stream import stream_from_file\n",
-    "from MOALearners import MOAClassifierSSL\n",
+    "from learners import MOAClassifierSSL\n",
     "from visualization import plot_windowed_results\n",
     "from evaluation import prequential_SSL_evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "955caba3-70c5-479f-8596-5663a30f47e4",
    "metadata": {},
    "outputs": [],
@@ -65,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "514ceb2e-87c2-4b27-ac9d-52435bbda524",
    "metadata": {},
    "outputs": [
@@ -73,10 +61,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'ClusterAndLabelClassifier',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1311e4710>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x125343010>,\n",
-       " 'wallclock': 11.576183080673218,\n",
-       " 'cpu_time': 23.980547,\n",
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x14c57c350>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x14c5820d0>,\n",
+       " 'wallclock': 12.616607904434204,\n",
+       " 'cpu_time': 25.412976999999998,\n",
        " 'other_measurements': {'num_unlabeled_instances': 99015.0,\n",
        "  'pseudo_label_accuracy': 0.28931,\n",
        "  'num_correct_pseudo_labeled': 28931.0,\n",
@@ -293,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "9ec0b7d8-954b-474b-84eb-58e77edd5cf9",
    "metadata": {},
    "outputs": [
@@ -301,10 +289,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'ClusterAndLabelClassifier',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x131253290>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x1312a6350>,\n",
-       " 'wallclock': 3.619126081466675,\n",
-       " 'cpu_time': 8.035920999999995,\n",
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12ea85990>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x14f109410>,\n",
+       " 'wallclock': 4.164032936096191,\n",
+       " 'cpu_time': 8.809932999999994,\n",
        " 'other_measurements': {'num_unlabeled_instances': 99015.0,\n",
        "  'pseudo_label_accuracy': 0.25152,\n",
        "  'num_correct_pseudo_labeled': 25152.0,\n",
@@ -504,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "29426ed6-d05e-4000-9606-10a47dd24780",
    "metadata": {},
    "outputs": [
@@ -542,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "89656078-4044-4863-9fb7-76f23e709033",
    "metadata": {},
    "outputs": [
@@ -550,10 +538,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'StreamingRandomPatches',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x110c43f90>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x1312c9890>,\n",
-       " 'wallclock': 3.1050171852111816,\n",
-       " 'cpu_time': 5.097646000000005,\n",
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x14c5ed990>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x14c5ed290>,\n",
+       " 'wallclock': 3.4363582134246826,\n",
+       " 'cpu_time': 5.221159999999998,\n",
        " 'other_measurements': {'num_unlabeled_instances': 99015.0,\n",
        "  'pseudo_label_accuracy': 0.0,\n",
        "  'num_correct_pseudo_labeled': 0.0,\n",
@@ -741,7 +729,7 @@
    ],
    "source": [
     "from moa.classifiers.meta import StreamingRandomPatches\n",
-    "from MOALearners import MOAClassifier\n",
+    "from learners import MOAClassifier\n",
     "\n",
     "srp10 = MOAClassifier(moa_learner=StreamingRandomPatches(), CLI=\"-s 10\")\n",
     "\n",
@@ -754,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "4003f5b7-6193-4f93-ac5c-4e2db840a6f6",
    "metadata": {},
    "outputs": [
