--- a/Using_jpype_MOA_example.ipynb
+++ b/Using_jpype_MOA_example.ipynb
@@ -96,8 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.3 s, sys: 1.91 s, total: 5.21 s\n",
-      "Wall time: 1.08 s\n"
+      "CPU times: user 3.79 s, sys: 605 ms, total: 4.4 s\n",
+      "Wall time: 1.29 s\n"
      ]
     },
     {
@@ -389,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
